--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,14 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
     "require": {
-        "php": "~7.4 || ~8.0"
+        "php": "~7.4 || ~8.0",
+        "symfony/console": "^5.4"
     },
     "config": {
         "sort-packages": true,
@@ -16,13 +22,14 @@
         }
     },
     "require-dev": {
+        "mikey179/vfsstream": "^1.6",
         "phpstan/phpstan": "^1.5",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "scripts": {
         "test": [
-            ".\\vendor\\bin\\phpcs --standard=PSR12 ./src",
+            ".\\vendor\\bin\\phpcs",
             ".\\vendor\\bin\\phpstan",
             ".\\vendor\\bin\\phpunit"
         ]
